--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
-    <title>
-        Test Head Title
-    </title>
-</head>
-
-<body>
-
-</body>
-
+  <head>
+    <title>Test Head Title</title>
+  </head>
+  <!-- This is a body -->
+  <body>
+    <p>This text is <strong>important!</strong></p>
+  </body>
 </html>
